# shcar

./: .gitignore  LICENSE  README.md  shcar.cabal
app/: Main.hs  Migrate.hs
src/: Api.hs  model.hs
src/Api/: Users.hs
test/: Spec.hs
