name:                shcar
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/shcar#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Model
  build-depends:       base >= 4.7 && < 5
                     , persistent >= 2.6
                     , persistent-template >= 2.5
                     , persistent-sqlite >= 2.6
                     , text >= 1.2
                     , time >= 1.6
                     , aeson >= 0.11
                     , QuickCheck >= 2.8
                     , quickcheck-text >= 0.1
  default-language:    Haskell2010


executable shcar-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shcar
                     , servant >= 0.8
                     , servant-server >= 0.8
                     , servant-mock >= 0.8
                     , warp >= 3.2
  default-language:    Haskell2010

executable migrate
  hs-source-dirs:      app
  main-is:             Migrate.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shcar
                     , persistent >= 2.6
                     , persistent-sqlite >= 2.6
  default-language:    Haskell2010

test-suite shcar-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shcar
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/shcar
